--- a/basic/css/basic.css
+++ b/basic/css/basic.css
@@ -41,6 +41,18 @@ body{
 	-ms-box-shadow:0 0 10px rgba(0,0,0,0.2);
 	-o-box-shadow:0 0 10px rgba(0,0,0,0.2);
 	box-shadow:0 0 10px rgba(0,0,0,0.2);
+	
+}	
+	
+#flipbook .hard{
+    background:#ccc !important;
+    color:#333;
+    -webkit-box-shadow:inset 0 0 5px #666;
+    -moz-box-shadow:inset 0 0 5px #666;
+    -o-box-shadow:inset 0 0 5px #666;
+    -ms-box-shadow:inset 0 0 5px #666;
+    box-shadow:inset 0 0 5px #666;
+    font-weight:bold;
 }
 
 .flipbook-viewport .page img{
@@ -51,6 +63,7 @@ body{
 	-ms-user-select: none;
 	user-select: none;
 	margin:0;
+
 }
 
 .flipbook-viewport .shadow{
